--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jest/**/tough-cookie": "^4.1.3",
     "postcss-cli/chokidar/glob-parent": "^6.0.1",
     "postcss-inline-svg/css-select/nth-check": "^2.0.1",
+    "react-router/**/path-to-regexp": "^1.9.0",
     "react-view/**/ansi-regex": "^5.0.1",
     "react-view/**/minimist": "^1.2.6",
     "react-view/@miksu/prettier/minimatch": "^3.0.8",
